[project]
name = "moneyline"
version = "0.1.0"
description = "Kenyan sportsbook arbitrage scanner for local bookmakers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rapidfuzz>=3.9.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.9.0",
    "tenacity>=8.3.0",
    "curl_cffi>=0.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.39.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
moneyline = "moneyline.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
